[package]

name = "space-roach-exterminator-3"
version = "0.0.1"
authors = ["Steve Jahns <s.t.jahns@gmail.com>"]

[dependencies]
ecs = "*"
time = "*"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston"

[dependencies.piston2d-sprite]
git = "https://github.com/pistondevelopers/sprite"

[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.uuid]
git = "https://github.com/rust-lang/uuid"

[dependencies.pistoncore-input]
git = "https://github.com/PistonDevelopers/input"
